# OpenFOAM

./: .gitignore  Manifest.toml  Project.toml  README.md
run/porousMediaResolvedHeatExchanger/: .gitignore  README.md  pyproject.toml
run/porousMediaResolvedHeatExchanger/porous_media/: geometry.py
run/porousMediaResolvedHeatExchanger/script/: sample_coded.py  sample_geometry.py  sample_geometry.yaml  sample_gyroid.py  sample_gyroid.yaml
run/regenerativeHeatExchanger/: .gitignore  Allclean  Allrun  README.md  bootstrap.sh  dimensioning.yaml  mesh_fluid.tar.xz  mesh_single.tar.xz  mesh_solid.tar.xz  mesh_zero.tar.xz  pyproject.toml  requirements.txt  tutorial.qmd
run/regenerativeHeatExchanger/01-fluid-only/: .gitignore  Allclean  Allrun  README.md  inspect.py  model.py
run/regenerativeHeatExchanger/02-fluid-only/: Allclean  Allrun  README.md  inspect.py
run/regenerativeHeatExchanger/03-fluid-only/: Allclean  Allrun  README.md  inspect.py
run/regenerativeHeatExchanger/04-fluid-solid/: .gitignore  Allclean  Allrestart  Allrun  README.md  model.py
run/regenerativeHeatExchanger/05-parametric/: Allrun
run/regenerativeHeatExchanger/heat_recovery/: __init__.py  calculators.py  cowper_like.py  manage.py  thermocline.py
run/regenerativeHeatExchanger/legacy/: .gitignore  Allrun
run/regenerativeHeatExchanger/model-cowper-like/: .gitignore  Allclean  Allrun  README.md  dimensioning.yaml  geometry.py  model.py  progress.md  progress.py  visualization.md
run/regenerativeHeatExchanger/model-porous-media/: README.md
run/regenerativeHeatExchanger/report/: .gitignore  (+3 more)
(+258 files in other folders)
